--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "37907a81",
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq_folder = \"/Users/ccnlab/Development/sequences/shaping/\"\n",
+    "seq_folder = \"/Users/ccnlab/Development/sequences/shaping/v1/\"\n",
     "\n",
     "ALL_DIRECTIONS = [\"top\", \"bottom\", \"left\", \"right\"]\n",
     "OUTPUT_COL_ORDER = [\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "83e9ea29",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "cf54ad9f",
    "metadata": {},
    "outputs": [
@@ -350,40 +350,40 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -391,14 +391,14 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -407,30 +407,32 @@
       "text/plain": [
        "   stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
        "0     0            0      1           3        3           0         2   \n",
-       "1     2            2      1           3        1           0         3   \n",
-       "2     0            0      1           3        3           1         2   \n",
-       "3     3            1      1           3        2           0         3   \n",
+       "1     1            1      1           3        1           2         0   \n",
+       "2     0            2      1           3        1           3         0   \n",
+       "3     3            1      1           3        3           1         2   \n",
        "\n",
        "   right_img  top_key  bottom_key  left_key  right_key  \n",
-       "0          1        0           2         3          1  \n",
-       "1          2        0           2         3          1  \n",
-       "2          0        0           2         3          1  \n",
-       "3          1        0           2         3          1  "
+       "0          1        1           0         2          3  \n",
+       "1          3        1           0         2          3  \n",
+       "2          2        1           0         2          3  \n",
+       "3          0        1           0         2          3  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def generate_shaping_round(num_directions, num_iter_per_stim, correct_key_mapping, stim_food_mapping, img_set, bs):\n",
+    "def generate_shaping_round(\n",
+    "    num_directions, iterations, correct_key_mapping, stim_food_mapping, img_set, bs\n",
+    "):\n",
     "    shaping_block = pd.DataFrame(\n",
-    "        generate_shaping_block(num_directions, num_iter_per_stim, correct_key_mapping)\n",
+    "        generate_shaping_block(num_directions, iterations[0], correct_key_mapping)\n",
     "    )\n",
     "    nonshaping_block = pd.DataFrame(\n",
     "        generate_non_shaping_block(\n",
-    "            num_directions, num_iter_per_stim, correct_key_mapping, stim_food_mapping\n",
+    "            num_directions, iterations[1], correct_key_mapping, stim_food_mapping\n",
     "        )\n",
     "    )\n",
     "    shaping_block[\"block\"] = bs * 2\n",
@@ -439,11 +441,16 @@
     "    nonshaping_block[\"img_folder\"] = img_set + 1\n",
     "    return pd.concat([shaping_block, nonshaping_block])\n",
     "\n",
-    "def generate_nonshaping_round(num_directions, num_iter_per_stim,  correct_key_mapping, stim_food_mapping, img_set, bs):\n",
+    "\n",
+    "def generate_nonshaping_round(\n",
+    "    num_directions, iterations, correct_key_mapping, stim_food_mapping, img_set, bs\n",
+    "):\n",
     "    all_blocks = []\n",
     "    for b in range(2):\n",
     "        nonshaping_block = pd.DataFrame(\n",
-    "            generate_non_shaping_block(num_directions, num_iter_per_stim, correct_key_mapping, stim_food_mapping)\n",
+    "            generate_non_shaping_block(\n",
+    "                num_directions, iterations[b], correct_key_mapping, stim_food_mapping\n",
+    "            )\n",
     "        )\n",
     "        nonshaping_block[\"block\"] = bs * 2 + b\n",
     "        nonshaping_block[\"img_folder\"] = img_set + 1\n",
@@ -451,155 +458,54 @@
     "\n",
     "    return pd.concat(all_blocks)\n",
     "\n",
+    "\n",
     "NUM_DIRECTIONS = 4\n",
     "NUM_FOOD = 4\n",
+    "version = \"v1\"\n",
     "NUM_ITER_PER_STIM = 13\n",
+    "iterations = (\n",
+    "    [6, NUM_ITER_PER_STIM]\n",
+    "    if version in seq_folder\n",
+    "    else [NUM_ITER_PER_STIM, NUM_ITER_PER_STIM]\n",
+    ")\n",
     "# potential image sets [0, 1], [2, 3], [0,2], [1,3], [0,3], [1,2]\n",
     "for seq_idx, set_comb in enumerate(combos_as_lists):\n",
     "    shaping_blocks = []\n",
-    "    nonshaping_blocks = []    \n",
+    "    nonshaping_blocks = []\n",
     "    for bs, img_set in enumerate(set_comb):\n",
-    "        correct_key_mapping, stim_food_mapping = generate_key_food_mapping(NUM_DIRECTIONS, NUM_FOOD)\n",
-    "        shaping_blocks.append(generate_shaping_round(NUM_DIRECTIONS, NUM_ITER_PER_STIM, correct_key_mapping, stim_food_mapping, img_set, bs))\n",
-    "        nonshaping_blocks.append(generate_nonshaping_round(NUM_DIRECTIONS, NUM_ITER_PER_STIM, correct_key_mapping, stim_food_mapping, img_set, bs))\n",
+    "        correct_key_mapping, stim_food_mapping = generate_key_food_mapping(\n",
+    "            NUM_DIRECTIONS, NUM_FOOD\n",
+    "        )\n",
+    "        shaping_blocks.append(\n",
+    "            generate_shaping_round(\n",
+    "                NUM_DIRECTIONS,\n",
+    "                iterations,\n",
+    "                correct_key_mapping,\n",
+    "                stim_food_mapping,\n",
+    "                img_set,\n",
+    "                bs,\n",
+    "            )\n",
+    "        )\n",
+    "        nonshaping_blocks.append(\n",
+    "            generate_nonshaping_round(\n",
+    "                NUM_DIRECTIONS,\n",
+    "                iterations,\n",
+    "                correct_key_mapping,\n",
+    "                stim_food_mapping,\n",
+    "                img_set,\n",
+    "                bs,\n",
+    "            )\n",
+    "        )\n",
     "\n",
-    "\n",
-    "    for name, data in zip([\"shaping\", \"nonshaping\"], [shaping_blocks, nonshaping_blocks]):\n",
+    "    for name, data in zip(\n",
+    "        [\"shaping\", \"nonshaping\"], [shaping_blocks, nonshaping_blocks]\n",
+    "    ):\n",
     "        concated_data = pd.concat(data)\n",
     "        concated_data[\"block\"] = concated_data[\"block\"] + 1\n",
     "        concated_data = concated_data[OUTPUT_COL_ORDER]\n",
     "        concated_data.to_csv(f\"{seq_folder}/{name}{seq_idx}_learning.csv\", index=False)\n",
     "\n",
     "concated_data.head(4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "id": "2952d60f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>stim</th>\n",
-       "      <th>correct_key</th>\n",
-       "      <th>block</th>\n",
-       "      <th>img_folder</th>\n",
-       "      <th>top_img</th>\n",
-       "      <th>bottom_img</th>\n",
-       "      <th>left_img</th>\n",
-       "      <th>right_img</th>\n",
-       "      <th>top_key</th>\n",
-       "      <th>bottom_key</th>\n",
-       "      <th>left_key</th>\n",
-       "      <th>right_key</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
-       "48     2            1      4           2        0           3         2   \n",
-       "49     1            0      4           2        3           1         2   \n",
-       "50     2            3      4           2        0           2         3   \n",
-       "51     3            2      4           2        2           3         0   \n",
-       "\n",
-       "    right_img  top_key  bottom_key  left_key  right_key  \n",
-       "48          1        2           1         3          0  \n",
-       "49          0        2           1         3          0  \n",
-       "50          1        2           1         3          0  \n",
-       "51          1        2           1         3          0  "
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "concated_data.tail(4)"
    ]
   }
  ],
